<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
     <PreferenceCategory android:title="@string/title_activity_bdlocation">
         <!-- RDSS定位 -->
         <Preference android:title="@string/title_activity_bdlocation"
             android:key="@string/key_rdss_location_manager"
             android:icon="@drawable/rdss_location"
             android:summary="@string/summary_rdss_location_manager"
             android:layout="@layout/preference_layout"
            />
          <!-- RNSS定位
         <Preference android:title="@string/title_rdss_setting_manager"
             android:key="@string/key_rdss_setting_manager"
             android:icon="@drawable/system_serial_set"
             android:summary="@string/summary_rdss_setting_manager"
             android:layout="@layout/preference_layout"/>
          <Preference android:title="@string/title_bd_location_manager"
             android:key="@string/key_bd_location_manager"
             android:summary="@string/summary_bd_location_manager"
             android:icon="@drawable/system_gps_status"
             android:layout="@layout/preference_layout"
          />-->
    </PreferenceCategory>
     <!--
     <PreferenceCategory android:title="@string/bdloc_loc_report_str">
         位置报告
         <Preference android:title="@string/bdloc_loc_report_str"
             android:key="@string/key_location_report_manager"
             android:icon="@drawable/location_report"
             android:summary="@string/summary_location_report_manager"
             android:layout="@layout/preference_layout"/>
         友邻位置
         <Preference android:title="@string/bdloc_friend_loc_str"
             android:key="@string/key_friend_location_manager"
             android:icon="@drawable/friend_location"
             android:summary="@string/summary_friend_location_manager"
             android:layout="@layout/preference_layout"/>
    </PreferenceCategory>
     -->
    <PreferenceCategory android:title="@string/bd_system_check_str">
         <!-- 本机信息 -->
         <Preference android:title="@string/title_local_machine"
             android:key="@string/key_local_mach_pref"
             android:icon="@drawable/system_local_set"
             android:summary="@string/summary_local_mach"
             android:layout="@layout/preference_layout"/>
          <!-- 波束状态-->
          <Preference android:title="@string/title_auto_check"
             android:key="@string/key_auto_check"
             android:summary="@string/summary_auto_check"
             android:icon="@drawable/system_bs_staus"
             android:layout="@layout/preference_layout"
          />
         <!--北斗二号卫星状态-->
         <Preference android:title="@string/title_bd2_satelite_status"
             android:key="@string/key_bd2_satelite_status"
             android:summary="@string/summary_bd2_satelite_status"
             android:icon="@drawable/system_bd2_status"
             android:layout="@layout/preference_layout"
          />
         
         <!--GPS卫星状态-->
        <Preference android:title="@string/title_gps_status"
             android:key="@string/key_gps_status"
             android:summary="@string/summary_gps_status"
             android:icon="@drawable/system_gps_status"
             android:layout="@layout/preference_layout"
        />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/system_set">
        <!-- 串口设置 
        <Preference android:title="@string/title_set_serial_port"
             android:key="@string/key_set_serial_port"
             android:summary="@string/summary_set_serial_port"
             android:icon="@drawable/system_serial_set"
        />-->
        <!-- 导航设置 
        <Preference 
            android:title="@string/title_navi_set"
            android:key="@string/key_navi_set"
            android:summary="@string/summary_navi_set"
            android:icon="@drawable/system_navi_set"
         />-->
         
        <!--北斗校时-->
        <Preference 
            android:title="@string/bd_check_time"
            android:key="@string/key_bd_check_time"
            android:summary="@string/summary_bd_check_time"
            android:icon="@drawable/location_report"
            android:layout="@layout/preference_layout"
        />
        
        <!--北斗作战时间-->
        <Preference 
            android:title="@string/bd_zuozhan_time"
            android:key="@string/key_zuozhan_time"
            android:summary="@string/summary_zuozhan_time"
            android:icon="@drawable/system_bs_staus"
            android:layout="@layout/preference_layout"
        />
        
        <!-- 管理信息 -->
         <Preference android:title="@string/title_manager_info"
            android:key="@string/key_manager_info"
            android:summary="@string/summary_manager_info"
            android:icon="@drawable/system_manager_set"
            android:layout="@layout/preference_layout"
         />
         <!-- 设置序列号
         <Preference android:title="@string/title_set_serial_num"
             android:key="@string/key_set_serial_num"
             android:summary="@string/summary_set_serial_num"
          />
        <ListPreference 
            android:title="@string/title_protocol_switch"
            android:key="@string/key_protocol_switch"
            android:summary="@string/summary_protocol_switch"
            android:dialogTitle="@string/title_protocol_switch"
            android:entries="@array/protocol_array_name"
            android:entryValues="@array/protocol_array_value"
            />-->
         <!--定位模式-->
         <Preference android:title="@string/title_location_model"
             android:key="@string/key_location_model"
             android:summary="@string/summary_location_model"
             android:icon="@drawable/system_serial_set"
             android:layout="@layout/preference_layout"
          />          
          
          <Preference android:title="@string/title_words_manager"
             android:key="@string/key_words_manager"
             android:summary="@string/summary_words_manager"
             android:icon="@drawable/system_manager_set"
              android:layout="@layout/preference_layout"
          /> 
          
          <!-- 设置中继站号码 -->
          <Preference android:title="@string/title_activity_relay_station_manager"
             android:key="@string/key_relay_station_manager"
             android:summary="@string/summary_relay_station_manager"
             android:icon="@drawable/system_gps_status"
             android:layout="@layout/preference_layout"
          />
               <!--关于-->
          <Preference android:title="@string/about_software"
             android:key="@string/key_about_software"
             android:summary="@string/summary_about_software"
             android:icon="@drawable/system_distance_calc"
             android:layout="@layout/preference_layout"
          />
          
    </PreferenceCategory>
    
    <!-- 
    <PreferenceCategory android:title="@string/title_tool">   
         <Preference android:title="@string/title_distance_calc"
             android:key="@string/key_distance_calc"
             android:summary="@string/summary_distance_calc"
             android:icon="@drawable/system_distance_calc"
          />
         <Preference android:title="@string/title_lon_lat_translate"
             android:key="@string/key_lon_lat_translate"
             android:summary="@string/summary_lon_lat_translate"
             android:icon="@drawable/system_cood_translate"
          />
    </PreferenceCategory>
   -->
</PreferenceScreen>
