<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_assist_alarm"
    android:orientation="vertical"
    android:padding="4dp"
   >
   
   <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="32dp"
    >
    <TextView
        android:id="@+id/bd_alarm_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/alarm_type"/>
    
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="20dp"
	    android:gravity="center_horizontal"
    >
    <Button
        android:id="@+id/reply_assist_alarm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start_alarm"
        />
    
     <Button
        android:id="@+id/cancle_assist_alarm_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cancle_alarm"
        />
    </LinearLayout>
   
</LinearLayout>
